build: Cleanup gradle build files